# agent_sofia_backend

./: .gitignore  IMPLEMENTATION_SUMMARY.md  QUICK_START.md  README.md  TAVUS_SETUP_GUIDE.md  WARP.md  agent.py  emotion_agent.py  emotion_models.py  emotion_routes.py  emotion_service.py  main.py  pyproject.toml  supabase_services.py
agent/: agent.py
helpers/: crawler.py  create_index.py
prompts/: __init__.py.py  init.py  sofia_prompt.py
test/: __init__.py  test_supabase.py
tools/: __init__.py.py  evaluation_question.py  get_evaluation_criteria.py  register_candidate.py  supabase_services.py  update_candidate_status.py
