[project]
name = "agent_sofia_backend"
version = "0.1.0"
requires-python = ">=3.11,<3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "supabase",
    "python-dotenv",
    "livekit-agents>=1.3.3",
    "livekit-plugins-openai>=1.3.3",
    "livekit-plugins-deepgram>=1.3.3",
    "livekit-plugins-cartesia>=1.3.3",
    "livekit-plugins-silero>=1.3.3",
    "livekit-plugins-turn-detector>=1.3.3",
    "livekit-plugins-openai>=1.3.3",
    "livekit-plugins-deepgram>=1.3.3",
    "livekit-plugins-cartesia>=1.3.3",
    "livekit-plugins-elevenlabs>=1.3.3",
    "openai>=2.8.1",
    "requests>=2.32.5",
    "beautifulsoup4>=4.14.2",
    "lxml>=6.0.2",
    "qdrant-client>=1.16.0",
    "livekit-plugins-tavus>=1.3.3",
]
